# smart_startup_evaluator_masumi_track

./: .gitignore  README.md  docker-compose.yml  output.txt  pyproject.toml
src/masumi_proj/: agentic_service.py  crew.py  demo.py  main.py
tests/: output.txt
